# rapp-stack-cubby

./: .editorconfig  .gitattributes  .gitignore  AI_CONTEXT.md  CAPABILITY_MATRIX.json  CHANGELOG.md  COMMAND_MANIFEST.json  CONFORMANCE.md  CONTEXT_INDEX.json  CONTRIBUTING.md  DEPENDENCY_LOCK.json  GITHUB_ACTIONS_LOCK.json  LIVE_PROVIDER_STATUS.json  Makefile  NOTICE  PROVENANCE.json  PUBLICATION_SCAN_POLICY.json  RAPP_END_TO_END.md  README.md  RELEASE_CHECKLIST.md  RELEASE_STATUS.json  RELEASE_TRUST.json  SBOM_INPUT.json  SECURITY.md  SOURCE_CENSUS.json  STACK_LOCK.json  STORE_INDEX.json  SYSTEM_GRAPH.json  VENDOR_MANIFEST.json  birth.json  pyproject.toml  rapp-release-source-manifest.json  rapp-super-rar.json  rappid.json
THIRD_PARTY_LICENSES/: OpenRappter-MIT.txt
docs/: 404.html  PUBLIC_PRIVATE_BOUNDARY.md  index.html  pages-manifest.json  robots.txt  sitemap.xml
schemas/: agent-manifest.schema.json  birth.schema.json  brainstem-chat-request.schema.json  brainstem-chat-response.schema.json  brainstem-egg.schema.json  capability-matrix.schema.json  command-manifest.schema.json  commons-signed-wrapper.schema.json  context-index.schema.json  controller-action.schema.json  controller-journal.schema.json  controller-loadout.schema.json  controller-receipt.schema.json  controller-result-proof.schema.json  controller-state.schema.json  controller-tombstone.schema.json  copilot-token.schema.json  cubby.schema.json  demo-receipt.schema.json  detached-signature.schema.json  evidence-signature.schema.json  github-actions-lock.schema.json  github-attestation-result.schema.json  (+34 more)
(+275 files in other folders)
