[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rapp-stack-cubby"
version = "0.1.0rc8"
description = "Contract verifier and isolated local runtime for the RAPP stack CUBBY"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [
    { name = "Kody Wildfeuer" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]
dependencies = ["cryptography==49.0.0"]

[project.scripts]
rapp-stack-cubby = "rapp_stack_cubby.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
